tests/format/misc/errors/invalid-typescript-decorators/jsfmt.spec.js
run_spec(__dirname, ["typescript", "babel-ts"]);
